Make canvas not responsive per Dave's Trello ticket: "Seems like the canvas of the studio is active responsive vs. I how it is suppose to work is the page is responsive but the canvas size is fixed. Labelled B"

--- a/app/assets/stylesheets/photoshoot/styles.sass
+++ b/app/assets/stylesheets/photoshoot/styles.sass
@@ -85,7 +85,6 @@ $canvasWidth: 100%
   width: $canvasWidth  !important
   height: $canvasHeight
   min-height: $canvasHeight
-  max-height: $canvasHeight !important
   float: left
   overflow: auto
 
